objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Contact_Business_Unit__c</fullName>
        <formula>Contact.sf42_Business_Unit__c</formula>
        <label>Contact Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Contact_Status__c</fullName>
        <formula>TEXT(Contact.sf42_gl_Status__c)</formula>
        <label>Contact Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptt_Date_added__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>When Member was added to campign</inlineHelpText>
        <label>Date added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ptt_Training_Payement__c</fullName>
        <inlineHelpText>Choose the payment status.</inlineHelpText>
        <label>Training Payement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>not paid yet</fullName>
                </value>
                <value>
                    <fullName>paid</fullName>
                </value>
                <value>
                    <fullName>discount</fullName>
                </value>
                <value>
                    <fullName>special price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ptt_Training_details__c</fullName>
        <label>Training details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>